--- a/includes/layouts/@post.njk
+++ b/includes/layouts/@post.njk
@@ -5,7 +5,7 @@
 {% block main %}
 
     <style>
-    .article-top::before{background-image:url({{ bgImg }});}
+    .article-top::before{background-image:url("https://picsum.photos/1280/540?blur=2.webp");}
     </style>
 
     <div class="parallax">
