--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -150,7 +150,7 @@ main {
                 perspective-origin: top;
                 perspective: 3px;
                 height: 100vh;
-                overflow-x: hidden;
+                // overflow-x: hidden;
             }
         }
     }
