--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -501,7 +501,7 @@ h3 {
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            background-image: url("https://picsum.photos/1280/540?blur=2.webp")
+            background-image: url("https://picsum.photos/1280/540.webp")
         }
 
         &::after {
