--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -137,6 +137,7 @@ body {
         flex-wrap: nowrap;
         background-image: url("https://picsum.photos/1280/720.webp");
         background-size: cover;
+        background-attachment: fixed;
     }
 }
 
