--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -180,8 +180,7 @@ aside {
             top: 0;
             bottom: 0;
             right: 0;
-            opacity: 0.33;
-            background-color: $paleblue;
+            background-color: rgba($paleblue, 0.42);
         }
     }
 
