--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -181,7 +181,7 @@ aside {
             top: 0;
             bottom: 0;
             right: 0;
-            background-color: rgba($paleblue, 0.42);
+            background-color: rgba(darken($paleblue 25%), 0.55);
         }
     }
 
