--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1136,10 +1136,6 @@ blockquote {
     }
 }
 
-.hljs {
-    background: $codeBgColor;
-}
-
 .hljs-ln-numbers {
     user-select: none;
     position: relative;
@@ -1166,7 +1162,7 @@ pre {
     code {
         display: block;
         padding: 1.25rem 1.5rem !important;
-        background: $codeBgColor;
+        background: $codeBgColor !important;
         margin-right: 0;
         margin-left: 0;
         line-height: 1.5;
