--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1157,7 +1157,7 @@ pre {
 
     position: relative;
     margin-bottom: 1.5rem;
-    font-size: 96%;
+    font-size: 0.97rem;
 
     code {
         display: block;
