--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -138,6 +138,7 @@ body {
         background-image: url("https://picsum.photos/1280/720.webp");
         background-size: cover;
         background-attachment: fixed;
+        background-position: center;
     }
 }
 
