--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 // note: if the minified CSS has "}#id" then nunjucks include fails
 
 // variables
-$version: "?v=20190330";
+$version: "?v=20210824";
 $base: #2c3235;
 $paleblue: #49616e;
 $blueishgrey: rgba(144, 164, 174, 0.18);
@@ -474,7 +474,6 @@ h3 {
         transform: translateZ(-1px) scale(1.34);
         transform-origin: top;
         transform-style: preserve-3d;
-        // backface-visibility: hidden;
     }
 }
 
@@ -494,7 +493,7 @@ h3 {
         &::after {
             content: "";
             position: absolute;
-            bottom: 0;
+            height: 100vh;
             left: 0;
             right: 0;
             top: 0;
@@ -522,6 +521,9 @@ h3 {
     background: white;
     position: relative;
     padding: 1.5rem;
+    
+    border-right: 21px solid transparent;
+    background-clip: padding-box;
 
     >img,
     >.cp_embed_wrapper,
