--- a/includes/filterbox.njk
+++ b/includes/filterbox.njk
@@ -7,7 +7,7 @@
                 {# {% if year !== prevyear %} #}
                     <span class="year">{{ year }}</span>
                 {# {% endif %} #}
-                <h3>{{ p.data.title | safe }}</h3>
+                <p class="title">{{ p.data.title | safe }}</h3>
                 <p>{{ p.data.excerpt | stripMarkdown }}</p>
             </a>
         </li>
