--- a/includes/filterbox.njk
+++ b/includes/filterbox.njk
@@ -8,7 +8,7 @@
                     <span class="year">{{ year }}</span>
                 {# {% endif %} #}
                 <p class="title">{{ p.data.title | safe }}</h3>
-                <p>{{ p.data.excerpt | stripMarkdown }}</p>
+                <p class="description">{{ p.data.excerpt | stripMarkdown }}</p>
             </a>
         </li>
         {# {% set prevyear = year %} #}
