feat: add spa-like navigation
https://dev.to/kartiknair/spa-like-instant-navigation-in-static-sites-3nnl

--- a/includes/layouts/@default.njk
+++ b/includes/layouts/@default.njk
@@ -66,5 +66,55 @@
             <script src="{{ script | url | cacheVersion }}" defer></script>
         {% endfor %}
         <script id="dsq-count-scr" src="//{{ cfg.disqusShortName }}.disqus.com/count.js" async></script>
+        <script>
+            window.onload = function () {
+  console.log("page loaded!");
+  updateLinks();
+
+  async function updateDom(path) {
+    console.log("Updating DOM with content from: ", path);
+    const res = await fetch(path);
+    const data = await res.text();
+
+    const get = (o) => o;
+    const parent = document.querySelector("html");
+    const currentNodes = document.querySelector("html").childNodes;
+    const dataNodes = new DOMParser()
+      .parseFromString(data, "text/html")
+      .querySelector("html").childNodes;
+
+    udomdiff(
+      parent, // where changes happen
+      [...currentNodes], // Array of current items/nodes
+      [...dataNodes], // Array of future items/nodes (returned)
+      get // a callback to retrieve the node
+    );
+
+    updateLinks();
+    window.scrollTo(0, 0);
+  }
+
+  function updateLinks() {
+    document.querySelectorAll("a").forEach((link) => {
+      if (link.host === window.location.host) {
+        link.setAttribute("data-internal", true);
+
+        link.addEventListener("click", async (e) => {
+          const destination = link.getAttribute("href");
+          e.preventDefault();
+          history.pushState({ route: destination }, destination, destination);
+          await updateDom(destination);
+        });
+      } else {
+        link.setAttribute("data-external", true);
+      }
+    });
+  }
+
+  window.onpopstate = function () {
+    updateDom(window.location.pathname);
+  };
+};
+        </script>
     </body>
 </html>
