fix: wrong pJax url

--- a/includes/layouts/@default.njk
+++ b/includes/layouts/@default.njk
@@ -66,7 +66,7 @@
             <script src="{{ script | url | cacheVersion }}" defer></script>
         {% endfor %}
         <script id="dsq-count-scr" src="//{{ cfg.disqusShortName }}.disqus.com/count.js" async></script>
-	<script src="https://cdn.jsdelivr.net/npm/pjax@VERSION/pjax.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/pjax@0.2.8/pjax.min.js"></script>
         <script>
 		var pjax = new Pjax({
 		  selectors: [
