--- a/includes/layouts/@default.njk
+++ b/includes/layouts/@default.njk
@@ -72,7 +72,8 @@
 		  selectors: [
 		    "title",
 		    "meta[name=description]",
-		    "main",
+		    "body",
+		    "#comments",
 		  ]
 		});
         </script>
