--- a/includes/layouts/@default.njk
+++ b/includes/layouts/@default.njk
@@ -63,7 +63,7 @@
             </aside>
         </div>
         {% for script in cfg.scripts %}
-            <script src="{{ script | url | cacheVersion }}" defer></script>
+            <script src="{{ script | url | cacheVersion }}"></script>
         {% endfor %}
         <script id="dsq-count-scr" src="//{{ cfg.disqusShortName }}.disqus.com/count.js" async></script>
 	<script src="https://cdn.jsdelivr.net/npm/pjax@0.2.8/pjax.min.js"></script>
